--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <body>
     <div class="taskContainer">
         <div class="taskApp">
-            <h2>Lista de Tareas <img src="images/icon.png"></h2>
-            <div class="newTask">
-                <input type="text" id="input-box" placeholder="agregar Tarea">
-                <button onclick="addTask()">Agregar</button>
-            </div>
-            <ul id="listContainer">              
-            </ul>
+          <h2>Lista de Tareas <img src="images/icon.png"></h2>
+          <div class="newTask">
+            <input type="text" id="input-box" placeholder="agregar Tarea">
+            <button id="add-button">Agregar</button>
+          </div>
+          <ul id="listContainer"></ul>
         </div>
-    </div>
+      </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>  
+    <script src="jquery.js"></script>
     <script src="app.js"></script>
 </body>
 </html> 
